minor edits to reading + tv log

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -141,9 +141,11 @@
 			<details>
 				<summary>finished</summary>
 				<ul>
+					<li>twin peaks: the return</li>
+					<li>twin peaks</li>
 					<li>orange is the new black</li>
 					<li>smiling friends</li>
-					<li>mob psycho 100</li>
+					<li>mob psycho 100 ❤︎</li>
 					<li>paper girls</li>
 					<li>neon genesis evangelion</li>
 					<li>over the garden wall</li>
@@ -153,19 +155,18 @@
 					<li>fionna and cake</li>
 					<li>breaking bad</li>
 					<li>adventure time</li>
-					<li>keep your hands off eizouken</li>
+					<li>keep your hands off eizouken ❤︎</li>
 					<li>hunter x hunter</li>
 					<li>the owl house</li>
 					<li>dorohedoro</li>
 					<li>bee and puppycat</li>
 					<li>devilman crybaby</li>
 					<li>andi mack</li>
-					<li>joe pera talks with you</li>
-					<li>clarence</li>
+					<li>clarence ❤︎</li>
 					<li>the haunting of hill house</li>
 					<li>your honor</li>
 					<li>steven universe</li>
-					<li>the rehearsal</li>
+					<li>the rehearsal ❤︎</li>
 					<li>one piece (live action)</li>
 					<li>grace & frankie</li>
 					<li>the queen's gambit</li>
@@ -185,7 +186,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 03.jan.24</b></p>
+		<p><b>last updated: 18.feb.24</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
