--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -61,7 +61,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 						<ul>
 							<small><a href="links#beginner" target="iframe_a">the basics (HTML and CSS focused)</a>, <a href="links#js" target="iframe_a">javascript</a>, <a href="links#css" target="iframe_a">css</a>, <a href="links#html" target="iframe_a">html</a>, <a href="links#layouts" target="iframe_a">html F2U templates</a>, <a href="links#sites" target="iframe_a">useful sites</a>,
 								<a href="links#tut" target="iframe_a">tutorials / guides</a>,
-								<a href="links#cool" target="iframe_a">cool stuff 4 your site</a>: <a href="links#guestbooks">guestbooks</a>, <a href="links#tools" target="iframe_a">tools</a>, <a href="links#calendar" target="iframe_a">calendars / clocks</a><a href="links#music" target="iframe_a">music</a>, <a href="links#rss" target="iframe_a">rss</a>,
+								<a href="links#cool" target="iframe_a">cool stuff 4 your site</a>: <a href="links#guestbooks">guestbooks</a>, <a href="links#tools" target="iframe_a">tools</a>, <a href="links#calendar" target="iframe_a">calendars / clocks</a>, <a href="links#music" target="iframe_a">music</a>, <a href="links#rss" target="iframe_a">rss</a>,
 								<a href="links#help-misc" target="iframe_a">misc</a>, <a href="links#neat" target="iframe_a">neat pieces of code</a></small>
 						</ul>
 						<br>↳ <a href="links#img" target="iframe_a">graphics</a>
