added a scans page to notebook, updated sitemap

--- a/doqmeat/notebook/F2U/materials.html
+++ b/doqmeat/notebook/F2U/materials.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>F2U materials</title>
-	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
+	<link rel="icon" type="image/x-icon" href="../favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="F2U.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -41,39 +41,42 @@
 	<div id="wrapper">
 		<p class="hide"><small><a href="/" target="_parent">home</a> > <a href="/notebook" target="_parent">notebook</a> > F2U ></small>
 			<center>
-				<h1>site materials</h1>
+				<h1>materials</h1>
 			</center>
-		<p>credit is not necesary but a link back is appreciated!</p>
 
 		<h2 id="buttons">buttons</h2>
-		<p><img src="../!g/ko-fi-template.png" alt="ko-fi template button"> ko-fi template button. background is transparent.</p>
+		<p><img src="../!g/ko-fi-template.png" alt="ko-fi template button"> <img src="../!g/ko-fi-template-red.png" alt="ko-fi red template button"> ko-fi template button. background is transparent.</p>
 
 		<h2 id="bgs">backgrounds</h2>
 
 		<p>click the bgs for the img to open in a new tab!</p>
 
-		<a class="link" href="/notebook/!g/grid-blue.png" target="_blank">
-			<div class="tiled-bg" style="background:url(/notebook/!g/grid-blue.png)"></div>
+		<a class="link" href="../!g/grid-blue.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-blue.png)"></div>
 		</a>
 
-		<a class="link" href="/notebook/!g/grid-green2.png" target="_blank">
-			<div class="tiled-bg" style="background:url(/notebook/!g/grid-green2.png)"></div>
+		<a class="link" href="../!g/grid-green.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-green.png)"></div>
 		</a>
 
-		<a class="link" href="/notebook/!g/grid-yellow2.png" target="_blank">
-			<div class="tiled-bg" style="background:url(/notebook/!g/grid-yellow2.png)"></div>
+		<a class="link" href="../!g/grid-green2.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-green2.png)"></div>
 		</a>
 
-		<a class="link" href="/notebook/!g/grid-pink.png" target="_blank">
-			<div class="tiled-bg" style="background:url(/notebook/!g/grid-pink.png)"></div>
+		<a class="link" href="../!g/grid-yellow2.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-yellow2.png)"></div>
 		</a>
 
-		<a class="link" href="/notebook/!g/grid-purple.png" target="_blank">
-			<div class="tiled-bg" style="background:url(/notebook/!g/grid-purple.png)"></div>
+		<a class="link" href="../!g/grid-pink.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-pink.png)"></div>
 		</a>
 
-		<a class="link" href="/notebook/!g/grid-grey.png" target="_blank">
-			<div class="tiled-bg" style="background:url(/notebook/!g/grid-grey.png)"></div>
+		<a class="link" href="../!g/grid-purple.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-purple.png)"></div>
+		</a>
+
+		<a class="link" href="../!g/grid-grey.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-grey.png)"></div>
 		</a>
 
 		<a class="link" href="/!g/bg/yellobg.png" target="_blank">
@@ -103,7 +106,7 @@ vertical-align:top;
 		</details>
 
 		<h2 id="cur">cursors</h2>
-		<p>rei chiquita cursors <a title="click to download .cur file" href="/notebook/!g/rei-blu.cur"><img src="/notebook/!g/rei-chiquita-pix-blu.png" width="26"></a> <a title="click to download .cur file" href="/notebook/!g/rei-grey.cur"><img src="/notebook/!g/rei-chiquita-pix-grey.png" width="26"></a></p>
+		<p>rei chiquita cursors <a title="click to download .cur file" href="../!g/rei-blu.cur"><img src="../!g/rei-chiquita-pix-blu.png" width="26"></a> <a title="click to download .cur file" href="../!g/rei-grey.cur"><img src="../!g/rei-chiquita-pix-grey.png" width="26"></a></p>
 		<details>
 			<summary>use custom cursors on your sites with this code:</summary>
 			<textarea>body {
