--- a/doqmeat/notebook/sitely/info.html
+++ b/doqmeat/notebook/sitely/info.html
@@ -27,11 +27,11 @@
 
 		<h2>site</h2>
 		<p>site has been live since 11.apr.23 under <b>doqmeat.neocities.org</b>. under <mark>doqmeat.com</mark> since 24.mar.24</p>
-		<li><b>coding editor</b>: <a href="https://code.visualstudio.com/" target="_blank">visual studio code</a></li>
 		<li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
 		<li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
 
 		<h2>software / programs</h2>
+		<li><b>coding editor</b>: <a href="https://code.visualstudio.com/" target="_blank">visual studio code</a></li>
 		<li><b>terminal</b>: <a href="https://gitforwindows.org/" target="_blank">git bash</a> (<a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> for custom themes)</li>
 		<h3>image editing</h3>
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - for images that look like this! <img title="from villain MV" src="/music/!g/ads/villain2.png" alt="example" width="100%"></li>
@@ -42,7 +42,7 @@
 		<li><b>puter</b>: HP envy x360 convertible laptop w/ stylus <small>which is how i draw here!</small> / 16gb ram / intel core i7 + nvidia geforce mx450</li>
 		<li><b>keyboard</b>: <a href="https://www.amazon.com/MOTOSPEED-Professional-Mechanical-Keyboard-Illuminated/dp/B07HFRB2DP" target="_blank">motospeed wired keyboard with red switches</a> <small>because it's convertible i use a seperate keyboard for it, this also helps it not overheat since i always have it folded in a upside down V shape</small></li>
 		<li><b>mouse</b>: <a href="https://www.amazon.com/Redragon-Wireless-Programmable-Rechargeable-M910-WS/dp/B0BW8DB72Z" target="_blank">redragon wireless gaming mouse</a></li>
-		<li><b>headphones</b>: razer kraken kitty headset <small>i love these headphones to death but the pink leather has started to peel off ever since i moved to a more humid area :')</small></li>
+		<li><b>headphones</b>: razer kraken kitty headset <small>i love these headphones to death but the pink leather has started to peel off ever since i moved to a more humid area :')</small> + JBL tune 720bt</li>
 
 
 	</div>
