--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -165,6 +165,9 @@
 					<br />
 					↳
 					<a href="/notebook/F2U/codes.html" target="_parent">templates</a>
+					<br />
+					↳
+					<a href="/notebook/F2U/scans.html" target="_parent">scans</a>
 				</ul>
 				<li><b>tutorials / guides</b></li>
 				<ul>
