--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -104,7 +104,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="site-p paper left">
 				<div class="left-in">
 					<p>this is the site related things tab</p>
-					<li><a href="sitely/info.html" target="iframe_b">site + tools info</a></li>
+					<li><a href="sitely/info.html" target="iframe_b">tools</a></li>
 					<li><a href="/sitemap.html" target="iframe_b">sitemap</a></li>
 					<li><a href="https://github.com/doqmeat/doqmeat.neocities.org/issues" class="outlink" target="_blank">to-do's</a> - <small>i've moved this to github issues since it's easier for me to keep track of and update!</small></li>
 					<li><a title="img heavy, might have to reload frame" href="sitely/graphics.html" target="iframe_b">graphics collection</a></li>
@@ -150,7 +150,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<p><mark>some links within these pages might be broken!</mark></p>
 					<li><a href="archive/homepage/index.html" target="iframe_c">past homepages</a></li>
 					<ul>
-						↳ <a href="archive/homepage/index.html#v1" target="iframe_c">v1</a> ↳ <a href="archive/homepage/index.html#v2" target="iframe_c">v2</a> ↳ <a href="archive/homepage/index.html#v3" target="iframe_c">v3</a>
+						↳ <a href="archive/homepage/index.html#v1" target="iframe_c">v1</a> ↳ <a href="archive/homepage/index.html#v2" target="iframe_c">v2</a> ↳ <a href="archive/homepage/index.html#v3" target="iframe_c">v3</a> ↳ <a href="archive/homepage/index.html#v4" target="iframe_c">v4</a>
 					</ul>
 					<li><a href="archive/layouts/index.html" target="iframe_c">page layouts</a></li>
 					<li><a href="archive/updates.html" target="iframe_c">past updates</a></li>
@@ -173,6 +173,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="F2U-p paper left">
 				<div class="left-in">
 					<p>things i make that is free to use! hoping to add more stuff here in the future!</p>
+					<p>credit is not necessary but a link back is appreciated!</p>
 					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol</p>
 					<li><a href="F2U/codes.html" target="iframe_d">templates</a></li>
 					<ul>
@@ -188,6 +189,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 						<br>
 						↳ <a href="F2U/materials.html#cur" target="iframe_d">cursors</a>
 					</ul>
+					<li><a href="F2U/scans.html" target="iframe_d">scans</a> <img src="/!g/pix/new1.gif"></li>
 
 					<li><a href="F2U/stamps.html" target="iframe_d">stamps</a></li>
 
