added a new font to page

--- a/doqmeat/notebook/links/fonts.html
+++ b/doqmeat/notebook/links/fonts.html
@@ -40,6 +40,8 @@
 		<!-- font template 
 <p class="font" style="font-family:x;font-size:19px;"><a href="" target="_blank" >x</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 -->
+		<p class="font" style="font-family:pixelhandwriting;font-size:19px;"><a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=556" target="_blank">Owls N' Ink</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
+
 		<p class="font" style="font-family:silkscreen;font-size:13px;"><a href="https://kottke.org/plus/type/silkscreen/" target="_blank">silkscreen</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:mononoki;font-size:15px;"><a href="https://madmalik.github.io/mononoki/" target="_blank">mononoki</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
