added a song under yukika and added asian glow to fav artists

--- a/doqmeat/music/songs/index.html
+++ b/doqmeat/music/songs/index.html
@@ -5,7 +5,7 @@
 	<!-- coded with love by des :3 meow -->
 	<meta charset="UTF-8">
 
-	<title>music player</title>
+	<title>fav artists n genres</title>
 	<link rel="icon" type="image/x-icon" href="/!g/pix/beat.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
@@ -28,7 +28,7 @@
 		<h2>fav artists</h2>
 		<p>i enjoy the music they make a whole lot :) here are my favorite songs from each of them.</p>
 		<ul>
-			<li>yukika - <a href="https://www.youtube-nocookie.com/embed/67jSYCSrnE4?si=18CbQhWmEj9dipFg" target="player">neon</a> <a href="https://www.youtube-nocookie.com/embed/rK69AriTIZc?si=IbG8dIH1aST_Rebk" target="player">shade</a></li>
+			<li>yukika - <a href="https://www.youtube-nocookie.com/embed/67jSYCSrnE4?si=18CbQhWmEj9dipFg" target="player">neon</a> <a href="https://www.youtube-nocookie.com/embed/rK69AriTIZc?si=IbG8dIH1aST_Rebk" target="player">shade</a> <a href="https://www.youtube-nocookie.com/embed/RIKTYUWQOcs?si=lsafTPX0RUipoRLV" target="player">pit-a-pet</a></li>
 
 			<li>siinamota - <a href="https://www.youtube-nocookie.com/embed/xCd5ancA8Aw?si=zuhmY_l_ovkyHeSu" target="player">lost &amp; found</a> <a href="https://www.youtube-nocookie.com/embed/WchOJBb--PU?si=C66O9BYVZgGZnnns" target="player">halo</a> <a href="https://www.youtube-nocookie.com/embed/j17SaXuAQGg?si=3hVlFpjOC39qFRUb" target="player">mashiro no iro</a> <a href="https://www.youtube-nocookie.com/embed/RNKRbnWVIxw?si=k36sWhxQoK0Zw5tM" target="player">999</a></li>
 
@@ -71,6 +71,7 @@
 
 			<li>erbatur / futureisfailed - <a href="https://bandcamp.com/EmbeddedPlayer/album=3020021047/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/track=2369725388/transparent=true/" target="player">bye-bye strobe</a> <a href="https://bandcamp.com/EmbeddedPlayer/album=663551354/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/track=3128202033/transparent=true/" target="player">miku opera</a> <a href="https://bandcamp.com/EmbeddedPlayer/album=2139139048/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" target="player">ハロー</a> <a href="https://bandcamp.com/EmbeddedPlayer/album=663551354/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/track=2200126477/transparent=true/" target="player">異​邦​ツ​チノコ </a></li>
 			<li>savant - <a href="https://www.youtube-nocookie.com/embed/GfQXIXE8NY8?si=pwih1R44wH4vEFmx" target="player">spacewolf</a> <a href="https://www.youtube-nocookie.com/embed/0VsYbOSguQI?si=YZskYAAcK2v9Sunv" target="player">siren</a> <a href="https://www.youtube-nocookie.com/embed/JqUAD-FOJgY?si=yEPTWJ3sBG8bQW8r" target="player">heartbreakers</a></li>
+			<li>asian glow - <a href="https://www.youtube-nocookie.com/embed/bRy3FwIp3Ds?si=l-ofMDNnlg8xW7vU" target="player">walls</a> <a href="https://www.youtube-nocookie.com/embed/xRQyR2OzFgo?si=l2KHnjkqckgAkGlE" target="player">jitnunkebi (winter's song)</a></li>
 		</ul>
 
 		<h2 id="genres">fav genres</h2>
@@ -92,7 +93,7 @@
 	</main>
 
 	<footer>
-		last updated: 16.jul.24 <br>
+		last updated: 22.feb.25 <br>
 		<a href="/music">music index</a> <span class="emoji"></span> <a href="/">home</a> <span class="emoji"></span> <a href="../fav-albums.html">fav albums</a> <span class="emoji"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
 
