slightly updated notebook, masaaki yuasa watchlist, and the guestbook archive pages

--- a/doqmeat/notebook/sitely/info.html
+++ b/doqmeat/notebook/sitely/info.html
@@ -2,50 +2,32 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>tools</title>
-	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
-	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="site.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
-	<!-- tooltip shit -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="/!f/tooltip-jquary.js"></script>
-	<script src="/!f/tooltip.js"></script>
-	<!--  end of tooltip shit -->
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>tools</title>
+ <link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
+ <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+ <link href="site.css" rel="stylesheet" type="text/css" media="all">
+ <link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
+ <!-- tooltip shit -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+ <script src="/!f/tooltip-jquary.js"></script>
+ <script src="/!f/tooltip.js"></script>
+ <!--  end of tooltip shit -->
 
 </head>
 
 <body>
-	<div id="wrapper">
-		<p class="hide" style="text-align:left;"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; sitely</small></p>
+ <main id="wrapper">
+  <p class="hide" style="text-align:left;"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; sitely</small></p>
 
-		<h1>tools n info</h1>
-
-		<p>if you wanna be nosy this is the perfect page for you.</p>
-
-		<h2>site</h2>
-		<p>site has been live since 11.apr.23 under <b>doqmeat.neocities.org</b>. under <mark>doqmeat.com</mark> since 24.mar.24</p>
-		<li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
-		<li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
-
-		<h2>software / programs</h2>
-		<li><b>coding editor</b>: <a href="https://code.visualstudio.com/" target="_blank">visual studio code</a></li>
-		<li><b>terminal</b>: <a href="https://gitforwindows.org/" target="_blank">git bash</a> (<a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> for custom themes)</li>
-		<h3>image editing</h3>
-		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - for images that look like this! <img title="from villain MV" src="/music/!g/ads/villain2.png" alt="example" width="100%"></li>
-		<li><a href="https://www.clipstudio.net/en/" target="_blank">clip studio paint</a> - anything i've made art / graphic related has been with this program most of the time.</li>
-		<li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a fork of <i>asesprite.</i> made some pixels with it.</li>
-
-		<h2>my stuff</h2>
-		<li><b>puter</b>: HP envy x360 convertible laptop w/ stylus <small>which is how i draw here!</small> / 16gb ram / intel core i7 + nvidia geforce mx450</li>
-		<li><b>keyboard</b>: <a href="https://www.amazon.com/MOTOSPEED-Professional-Mechanical-Keyboard-Illuminated/dp/B07HFRB2DP" target="_blank">motospeed wired keyboard with red switches</a> <small>because it's convertible i use a seperate keyboard for it, this also helps it not overheat since i always have it folded in a upside down V shape</small></li>
-		<li><b>mouse</b>: <a href="https://www.amazon.com/Redragon-Wireless-Programmable-Rechargeable-M910-WS/dp/B0BW8DB72Z" target="_blank">redragon wireless gaming mouse</a></li>
-		<li><b>headphones</b>: razer kraken kitty headset <small>i love these headphones to death but the pink leather has started to peel off ever since i moved to a more humid area :')</small> + JBL tune 720bt</li>
-
-
-	</div>
+  <h1>site info</h1>
+  <li>live since 11.apr.23 under <b>doqmeat.neocities.org</b></li>
+  <li>under <mark>doqmeat.com</mark> since 24.mar.24!</li>
+  <li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
+  <li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
+  <li>deployed to neocities via <a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">github</a></li>
+ </main>
 </body>
 
 </html>
