--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -74,6 +74,9 @@
 				<br />
 				↳
 				<a href="/music/recaps/index.html" target="_parent">yearly recaps</a>
+				<br />
+				↳
+				<a href="/music/links.html" target="_parent">related offsite links</a>
 			</ul>
 			<li><a href="/shrines" target="_parent">shrines</a></li>
 			<ul>
@@ -124,7 +127,8 @@
 			</ul>
 			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
 			<ul>
-				<li><a href="/guestbook/archive.html">archived 123guestbook</a></li>
+				<li><a href="/guestbook/archive1.html">archived 123guestbook</a></li>
+				<li><a href="/guestbook/archive2.html">archived archived site hosted guestbook</a></li>
 			</ul>
 			<li><a href="/notebook" target="_parent">notebook</a></li>
 			<ul>
@@ -150,7 +154,10 @@
 					(you're here!)
 					<br />
 					↳
-					<a href="/notebook/info.html" target="_parent">tools info</a>
+					<a href="/notebook/tools.html" target="_parent">tools</a>
+					<br />
+					↳
+					<a href="/notebook/info.html" target="_parent">site info</a>
 					<br />
 					↳
 					<a href="/notebook/graphics.html" target="_parent">graphics</a>
