--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -104,7 +104,8 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="site-p paper left">
 				<div class="left-in">
 					<p>this is the site related things tab</p>
-					<li><a href="sitely/info.html" target="iframe_b">tools</a></li>
+					<li><a href="sitely/info.html" target="iframe_b">site info</a></li>
+					<li><a href="sitely/tools.html" target="iframe_b">tools</a></li>
 					<li><a href="/sitemap.html" target="iframe_b">sitemap</a></li>
 					<li><a href="https://github.com/doqmeat/doqmeat.neocities.org/issues" class="outlink" target="_blank">to-do's</a> - <small>i've moved this to github issues since it's easier for me to keep track of and update!</small></li>
 					<li><a title="img heavy, might have to reload frame" href="sitely/graphics.html" target="iframe_b">graphics collection</a></li>
@@ -234,9 +235,9 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<div id="sticky" class="draggable">
 						<br><br>welcome to my little resource notebook! :3<br><img src="/!g/deco/bunnyzzz.gif">
 					</div>
-					<p>in this page you'll find a variety of things i have saved for my own reference, but maybe they might be helpful (or at least interesting) for you too!</p>
-					<p>i also have things related to the making of this website here!</p>
-					<p><mark>click on the tabs to navigate it</mark> <img src="/!g/deco/catlaying.gif"></p>
+					<p>in this notebook i store any helpful <small>(and fun, we can't for get to have fun every once in a while)</small> links that i've stumbled upon, an archive of various doqmeat.com pages, site info, and host my F2U stuff!</p>
+					<p>last updated on: <b>22.feb.25</b></p>
+					<p><a href="/">go to homepage</a></p>
 
 					<!-- 		paper left end div -->
 				</div>
@@ -255,6 +256,8 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<li>handwritten font by <a href="http://sozaiya405.chu.jp/405/font.htm#NEW%E3%83%9A%E3%83%B3%E5%AD%97P" target="_blank">sozaiya405</a></li>
 
 				<li>notebook holographic cover img <a title="from pexels" href="https://www.pexels.com/photo/holographic-foil-as-abstract-background-4286932/" target="_blank">by miodrag kitanović on pexels</a></li>
+
+				<li>body background by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya405</a></li>
 
 				<img src="/!g/deco/crystalgreenhouse_book.gif">
 				<img src="/!g/deco/collegeroad_pencase.gif">
