--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -48,12 +48,16 @@
 			</section>
 			<!-- 2025 section -->
 			<section id="y2025">
-				<!-- logs under here!!! -->
+				<!-- new entry! -->
+				<article>
+					<p><b>23.feb.25 - 5pm</b> this month will probably be first time ever i skip a month in my <a href="/journal">journal</a> page! i have 2 exams at the end of this week <small>(for my <i>calculus 1</i> and <i>intro to programming</i> classes!)</small> so it's very likely i won't be doing any logs for february. i've been doing monthly journal logs here since... april 2023. kinda crazy tbh! during the early stages of my site, i kinda just talked about whatever there. nowadays i try for my journal logs to be more... thoughtful i guess. atm i don't really have much to talk about. uni has kept me busy but i also appreciate it for that. guys i kinda love studying i'm not gonna lie. i'm lowkey unemployed. i still have my job! but i barely get any shifts, and the shift that i end up getting conflict with my uni classes... idk man shits kinda frustrating sometimes <img src="/!g/pix/catfire.gif" alt=""> but everything else has been pretty okay.</p>
+					<p>i did some <i>calculus</i> exercises yesterday and i got them all right. it made me shout <q>YES!!!</q> and jump out of joy from my desk. that little moment reminded me of this page from <a href="https://pluto22.neocities.org/" target="_blank" class="outlink">pluto22</a> called <a href="https://pluto22.neocities.org/prettythings" target="_blank" class="outlink">pretty things</a>. life really is all about small moments like that. i love visiting that page every once in a while.</p>
+				</article>
 				<article>
 					<p><b>16.feb.25 - 11am</b> my girlfriend got me the same valentine's day card that i got her... so cute. i love her so much! <button onclick="showPic('!g/250216-flowers.png','a cup with some flowers','she also got me flowers! not sure what kind they are!')">flowers.png</button></p>
 				</article>
 				<article>
-					<p><b>13.feb.25 - 10am</b> something that i failed to mention on my last log was that my site having such a reach also means that it will inevitably get to places outside of its target. scary places. it is the internet after all and everyone does have access to it. but with this said, the positives will always outweigh the negatives. i will continue to have fun and silly and be <u>me</u> on the internet no matter what <img src="https://doqmeat.com/!g/pix/emote1lov.gif" alt=""></p>
+					<p><b>13.feb.25 - 10am</b> something that i failed to mention on my last log was that my site having such a reach also means that it will inevitably get to places outside of its target. scary places. it is the internet after all and everyone does have access to it. but with this said, the positives will always outweigh the negatives. i will continue to have fun and silly and be <u>me</u> on the internet no matter what <img src="/!g/pix/emote1lov.gif" alt=""></p>
 				</article>
 				<article>
 					<p><b>02.feb.25 - 12pm</b> i clicked on a random <a title="★ stargirl lee - you should make a personal website and join the indie web ^_^" href="https://youtu.be/4I48N6pGu2Y" target="_blank" class="outlink">youtube video</a> about the indie web and to my surprise my website was mentioned in it! it kinda takes me aback the reach my personal site has had. from people telling me they love the look, to just saying how they relate to the things i write in here. i am very grateful. i recently reached 1000 followers on neocities. that is a crazy number to me. i never thought my site would reach as many people as it has when i first created it. its pretty heartwarming to see something i created for <i>myself</i> to be so recognized and enjoyed by others.</p>
