--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -228,6 +228,7 @@
 			<a title="pluto22 - a reminder of the little things in life! love their writing style" href="https://pluto22.neocities.org/" target="_blank"><img src="!g/pluto2.png" alt="pluto22"></a>
 			<a title="liminalmind" href="https://liminalmind.neocities.org/" target="_blank"><img src="!g/liminalmind.png" alt="liminalmind"></a>
 			<a title="peachmoon" href="https://peachmoon.moe/" target="_blank"><img src="!g/peachmoon.gif" alt="peachmoon"></a>
+			<a href="https://bluemeadows.moe" target="_blank"><img src="https://bluemeadows.moe/images/bluemeadows_88x31.gif" alt="visit bluemeadows.moe"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -247,7 +248,8 @@
 			<a title="web art... i love their stuff!! a massive inspiration to me and what i want to use the internet for" href="https://chia.design" target="_blank">chia.design</a> /
 			<a href="https://thalita.dev" target="_blank">thalita.dev</a> /
 			<a href="https://xobyte.org/" target="_blank">xobyte</a> /
-			<a href="https://gilest.org/index.html" target="_blank">gilest.org</a>
+			<a href="https://gilest.org/index.html" target="_blank">gilest.org</a> /
+			<a href="https://smile4anything.com/" target="_blank">smile4anything</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> others</h3>
