featured song n album

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>28.feb.25</b> - new featured song &amp; album :-)</p>
    <p><b>08.feb.25</b> - new listening log: <a href="listening-log/2025/index.html#1" target="mainframe">DeBÍ TiRAR MáS FOToS</a></p>
    <p><b>26.jan.25</b> - added <a href="links.html" target="mainframe">related links</a> page</p>
    <p><b>23.jan.25</b> - updated <a href="kpop-producers.html" target="mainframe">fav kpop producers</a> + added a message box where you can recommend me something and it will pop up to my e-mail!</p>
@@ -93,15 +94,15 @@
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
    <div class="song">
-    <h4><b>BAILE INoLVIDABLE</b> - bad bunny</h4>
-    <iframe width="718" height="404" src="https://www.youtube.com/embed/a1Femq4NPxs" title="BAD BUNNY - BAILE INoLVIDABLE (Video Oficial) | DeBÍ TiRAR MáS FOToS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>lowkey blew my mind when i first heard it and also opened my heart to bad bunny.</p>
+    <h4><b>love lightside</b> - 2 mello</h4>
+    <iframe width="907" height="510" src="https://www.youtube.com/embed/2Gui0Tbfqjk" title="2 Mello - Love Lightside (Love Sickubus)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>2 mello has never failed me.</p>
    </div>
    <div class="lp">
-    <h4><b>4study4work4inst Vol.2</b> - tripleS</h4>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=PmIcbZ8VFOVlIt3s&amp;list=OLAK5uy_lG01QVCqzoWwsYZD32Wa5w1AlUHvuFegk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>i love it when tripleS release their instrumental albums bc i really do think they have some of the best production in kpop right now. there so much detail in this. i even heard stuff i couldn't never heard if this was never released. I &hearts; INSTRUMENTALS. actually i like some of these more without the vocals.... i'll listen to anything with a good beat.</p>
-    <p><b>highlights:</b>24, éclair, girls never die, heart raider</p>
+    <h4><b>kirara</b> - kirara</h4>
+    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4082560632/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://stqpkiraradongjae.bandcamp.com/album/kirara">KIRARA by KIRARA</a></iframe>
+    <p>an insanely fun house album my korean indie artist KIRARA. i need to listen to more of her stuff. it's kinda great for studying in my experience. this is just very silly and nice to listen to. there's also a very nice selection of guest here with only 5/14 being instrumental ones at that. while still in relative the same soundscape there's a lot of variety in the songs as well.</p>
+    <p><b>highlights:</b>bird's eye view, outside earth, music, love me</p>
    </div>
    <hr>
 
@@ -139,7 +140,7 @@
   <footer id="foot" class="box">
    <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
    <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
-   last updated on 19.nov.24
+   last updated on 28.feb.25
    <br>
    <b>credit:</b>
    bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
