--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -25,9 +25,11 @@
 		width: 300px;
 		text-align: left;
 		vertical-align: top;
+		border-right: 3px dashed pink;
 	}
 
 	.t-right {
+		padding-left: 10px;
 		width: 300px;
 		text-align: left;
 		vertical-align: top;
@@ -52,7 +54,7 @@
 		<h2>featured music</h2>
 		<p>every once in a while i pick a song &amp; album to highlight on my page! take these as recommendations and just stuff i'm currently listening to :3</p>
 		<!-- contents 
-<details><summary>
+<details open><summary>
 <span class="date">00.xxx.25 - ? : </span>
 </summary>
 <table><td class="t-left">
@@ -64,7 +66,24 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">08.feb.25 - ? : BAILE INoLVIDABLE / 4study4work4inst Vol.2</span>
+				<span class="date">28.feb.25 - ? : love lightside / KIRARA</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="907" height="510" src="https://www.youtube.com/embed/2Gui0Tbfqjk" title="2 Mello - Love Lightside (Love Sickubus)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>2 mello has never failed me.</p>
+				</td>
+				<td class="t-right">
+					<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4082560632/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://stqpkiraradongjae.bandcamp.com/album/kirara">KIRARA by KIRARA</a></iframe>
+					<p>an insanely fun house album my korean indie artist KIRARA. i need to listen to more of her stuff. it's kinda great for studying in my experience. this is just very silly and nice to listen to. there's also a very nice selection of guest here with only 5/14 being instrumental ones at that. while still in relative the same soundscape there's a lot of variety in the songs as well.</p>
+					<p><b>highlights:</b>bird's eye view, outside earth, music, love me</p>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">08.feb.25 - 28.feb.25 : BAILE INoLVIDABLE / 4study4work4inst Vol.2</span>
 			</summary>
 			<table>
 				<td class="t-left">
