added some new commands to cheatsheet

--- a/doqmeat/learning/bash/index.html
+++ b/doqmeat/learning/bash/index.html
@@ -16,21 +16,21 @@
 <body>
 	<h1>bash reference sheet</h1>
 	<main>
-		<p>but mainly the ones i know off / taken note of. take in mind that i use git bash on windows so some stuff might be different for you. i'm new to all this so i've explained some things from how i understand them. feel free to e-mail me if i got something wrong <img src="/!g/pix/catsob.gif" alt="cat crying"></p>
+		<p>but mainly the ones i know how to use / taken note of. take in mind that i use <a href="https://git-scm.com/" target="_blank" class="outlink">git bash for windows</a> so some stuff might be different for you. i'm new to all this so i've explained some things from how i understand them. feel free to e-mail me if i got something wrong <img src="/!g/pix/catsob.gif" alt="cat crying"></p>
 		<h2>overall</h2>
 		<ul>
 			<li><code>clear</code> - clears the terminal screen.</li>
 			<li><code>touch [filename]</code> - creates a file.</li>
-			<li><code>cd [dir]</code> - moves where you are. <code>cd -</code> gets you to the directory you were previously at.</li>
+			<li><code>cd [dirname]</code> - moves where you are. <code>cd -</code> gets you to the directory you were previously at.</li>
 			<li><code>mkdir [dirname]</code> - makes a directory / folder.</li>
 			<li><code>exit</code> - exit terminal.</li>
 			<li><code>history</code> - gives you a history of your inputs.</li>
 			<li><code>help</code> - more info.</li>
 			<li><code>start [filename]</code> - opens a file.</li>
-			<li><code>mv</code> - for renaming / moving files</li>
+			<li><code>mv [1] [2]</code> - for renaming / moving files</li>
 			<li><code>pwd</code> - shows you where you currently are</li>
 			<li><code>which [programname]</code> - tells you the location path the terminal is using to locate the program.</li>
-			<li><code>ls</code> - lists files of the directory you're currently in. <code>ls -l</code> for a more detailed listing.</li>
+			<li><code>ls</code> - lists files of the directory you're currently in. <code>ls -l</code> for a more detailed listing. <code>ls -a</code> to show hidden files. <code>ls --help</code> help!!!</li>
 			<li><code>rm</code> - remove a file.</li>
 			<li><code>echo</code> - outputs whatever you give it. </li>
 			<li><code>cat [filename]</code> - outputs the contents of that file in the terminal</li>
@@ -43,6 +43,7 @@
 
 		</ul>
 		<h3>notes</h3>
+		<p>you can hit <code>tab</code> and the terminal will (try to) autocomplete where ever directory or file you want to go.</p>
 		<p>when typing a file that has an ! you need to escape it using the backslash. if i have a folder called <b>!g/</b> then you would write <code>\!g/</code> on the terminal.</p>
 		<p>files with spaces need to be closed with single or double quotes like this <code>'folder 1'</code></p>
 		<p>use <code>q</code> to quit some scripts</p>
