--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -75,7 +75,7 @@ iframe2
 				</td>
 				<td class="t-right">
 					<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4082560632/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://stqpkiraradongjae.bandcamp.com/album/kirara">KIRARA by KIRARA</a></iframe>
-					<p>an insanely fun house album my korean indie artist KIRARA. i need to listen to more of her stuff. it's kinda great for studying in my experience. this is just very silly and nice to listen to. there's also a very nice selection of guest here with only 5/14 being instrumental ones at that. while still in relative the same soundscape there's a lot of variety in the songs as well.</p>
+					<p>an insanely fun house album by korean indie artist KIRARA. i need to listen to more of her stuff. it's kinda great for studying in my experience. this is just very silly and nice to listen to. there's also a very nice selection of guest here with only 5/14 being instrumental ones at that. while still in relative the same soundscape there's a lot of variety in the songs as well.</p>
 					<p><b>highlights:</b>bird's eye view, outside earth, music, love me</p>
 				</td>
 			</table>
