deleted files, new homepage archive, changes to about, minor changes to scrapbook

--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -43,8 +43,19 @@
 		<p>i usually have a little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page! on older pages, you'll find some credit links in the <mark>source code</mark> :)</p>
 
 		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something you don't see credited or can't find what you're looking for, you're always welcome to send a msg in my chatbox or e-mail. happy coding!</p>
+		<h2 id="home">homepage v5 credits</h2>
+		<li><a href="fonts.html">fonts</a> used: <a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=556" target="_blank">owls n ink</a> (header font), gaegu</li>
+		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">lastfm last played widget</a> by bianca rosa</li>
+		<li>most cat graphics from <a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank">catstuff</a></li>
+		<li>cute memo scans from <a href="https://www.flickr.com/photos/kawaiiscans/" target="_blank">kawaiiscans</a></li>
+		<li>flower pixels used in <b>nav</b> by <a href="http://tora7.ciao.jp/mate322.html" target="_blank">tora7.ciao.jp</a>
+		<li>pixels used in <b>updates / rss</b> section are from <a href="https://foollovers.com/" target="_blank">foollovers</a></li>
+		<li>notepad bg pattern from <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya405</a></li>
 
-		<h2 id="home">homepage v4 credits</h2>
+		<hr>
+
+		<h2>ARCHIVED - homepage v4 credits</h2>
+		<li>FOUND IT! <a href="https://kalechips.net/projects/snippets/styleswitcher" target="_blank">style switcher</a> code</li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">lastfm last played widget</a> by bianca rosa</li>
 
 		<h3>icy theme</h3>
