--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -128,25 +128,19 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 years old from a small island called puerto rico. my website <small>(and overall online presence...)</small> is in english though my native language is spanish. you can talk to me in either one of them. i go by he / she <u title="él / ella en español. and no 'they' please!">*</u> pronouns. currently on my 2nd year of computer science <img src="/!g/pix/heart4.png" alt=""> i also have a beautiful girlfriend who i love very much!</p>
+					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 24 years old from puerto rico. fluent in english and spanish. he / she <u title="él / ella en español">*</u> pronouns. computer science student <img src="/!g/pix/heart4.png" alt=""> i also have a beautiful girlfriend who i love very much!</p>
 
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
-				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"> but at the end of the day i just like being silly and having fun.</p>
+				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i think that's pretty much it when it comes to about me <img src="/!g/pix/emote1emba.gif" alt=""> hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"> in the future i might have more to say about myself. </p>
 
-				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">despite being a bit introverted, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading!</p>
+				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i'm pretty introverted, but i am friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
 
-				<h3>doqmeat.com origin story</h3>
+				<h3>why did i build this site?</h3>
+				<p>one day i stumbled upon <a href="https://hunipyon.neocities.org/" target="_blank">hunipyon</a>'s site and it kinda opened my eyes to what having your space on the internet could be. so i started my HTML/CSS journey all the way from the bottom around april 2023 in hopes to create something!</p>
+				<p>i like keeping track of things and talking about what i love. i started this page out of boredom one day but then i just fell in love with every aspect of having your very own site where you can literally do whatever the fuck you want. that is pretty much the foundations that my site is built upon. to have fun and be unabashedly me.</p>
 
-				<p>one day i stumbled upon <a href="https://hunipyon.neocities.org/" target="_blank">hunipyon</a>'s site and i just fell in love with the concept of having my very own site i can customize however the hell i want and put whatever i want in it. the possibilities are truly endless!</p>
-
-				<p><img src="/!g/deco/puter.gif" align="left" style="margin-right:15px;">so i took it upon myself to learn html and css. it was pretty tricky the first few months. and i still have much to learn. but i am confident enough in my coding skills where i can imagine how i want a page and build it from scratch. which is certainly a new hobby i've picked up from making my own site! i have fallen in love with the process of making new pages and decorating them to my liking. i find it very entertaining and fun to do, which is why all of my pages are unique on their own!</p>
-
-				<p>i like keeping track of things and talking about what i love. these are pretty much the foundations that my site is built upon.</p>
-
-				<p><a title="art by blackrabbit-25" href="https://www.deviantart.com/blackrabbit-25" target="_blank"><img src="/!g/deco/blackrabbit25-book.gif" align="right" style="margin-top:-25px;"></a>so think of my website as a digital journal. i will share bits and pieces of my personal life, interests, passions, and even creations. <mark>my goal is simply to have a place on the internet where i can freely be myself without the chaos and limitations of social media. and to have fun</mark>, of course :3 i wouldn't be doing any of this if it wasn't fun for me.</p>
-
-				<p style="text-align: right"><b>last updated on: 19.nov.24</b></p>
+				<p style="text-align: right"><b>last updated on: 02.mar.25</b></p>
 			</div>
 		</div>
 	</div>
@@ -191,12 +185,9 @@
 			<div class="wrapper-in padding list">
 				<h3>in general</h3>
 				<li>cats</li>
-				<li>chocolate milk</li>
 				<li>making lists</li>
-				<li>journaling</li>
 				<li>horror</li>
 				<li>driving at night (with no traffic)</li>
-				<li>coding HTML, CSS, JS</li>
 				<li>hand shakes</li>
 				<li>the color purple and yellow</li>
 
@@ -208,10 +199,10 @@
 				<li>fallout 4</li>
 
 				<h3>animanga</h3>
+				<li>madoka magica</li>
 				<li>kaiba (2008)</li>
 				<li>our dreams at dusk</li>
 				<li>mob psycho 100</li>
-				<li>madoka magica</li>
 				<li>eizouken</li>
 
 				<h3>films</h3>
