--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -38,12 +38,14 @@
 
 		<h2>stuff used in my website</h2>
 
-		<p>a lot of stuff i use for my site can be found on my <a href="/notebook/links/index.html">links</a> page! for the fonts i've used you can look at all of them <a href="/notebook/links/fonts.html">here</a> :)</p>
+		<p>tooltip / title on hover script i use across all of my site is from <a href="http://manos.malihu.gr/style-my-tooltips-jquery-plugin/" target="_blank">malihu</a></p>
 
-		<p>i usually have a little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page! on older pages, you'll find some credit links in the <mark>source code</mark> :)</p>
+		<p>there's always little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page! some older pages might not have this so do feel free to ask me! everything i use for my site can be found on my <a href="/notebook/links/index.html">links</a> page! for the fonts i've used you can look at all of them <a href="/notebook/links/fonts.html">here</a> :) </p>
 
 		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something you don't see credited or can't find what you're looking for, you're always welcome to send a msg in my chatbox or e-mail. happy coding!</p>
+
 		<h2 id="home">homepage v5 credits</h2>
+
 		<li><a href="fonts.html">fonts</a> used: <a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=556" target="_blank">owls n ink</a> (header font), gaegu</li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">lastfm last played widget</a> by bianca rosa</li>
 		<li>most cat graphics from <a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank">catstuff</a></li>
