--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -79,8 +79,8 @@ finished on 02.mar.25 -->
 			<h3>media</h3>
 			<a class="m" href="/music">music</a>
 			<a class="m" href="/vgs">video games</a>
-			<a class="m" href="/tv">tv <img src="/!g/pix/updated1.gif" alt="updated"></a>
-			<a class="m" href="/reading">reading <img src="/!g/pix/updated1.gif" alt="updated"></a>
+			<a class="m" href="/tv">tv</a>
+			<a class="m" href="/reading">reading</a>
 
 			<h3>misc</h3>
 			<a class="o" href="/learning">learning in public</a>
@@ -152,11 +152,11 @@ finished on 02.mar.25 -->
 						<span id="statuscafe-content"></span>
 					</p>
 					<br>
-					<p><span class="title">playing: </span> style savvy styling star, balatro</p>
+					<p><span class="title">playing: </span> style savvy styling star, <a href="vgs/games/balatro/index.html">balatro</a></p>
 					<br>
-					<p><span class="title">watching: </span> severance, twin peaks: the return</p>
-					<br>
-					<p><span class="title">reading: </span> <i>madoka magica: wraith arc</i></p>
+					<p><span class="title">watching: </span> severance</p>
+					<!-- <br>
+					<p><span class="title">reading: </span> <i></i></p> -->
 					<br>
 					<p><span class="title">working on: </span> studying!</p>
 					<p class="date">last updated: 02.mar.25</p>
