--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -46,7 +46,7 @@
 
 		<h2 id="home">homepage v5 credits</h2>
 
-		<li><a href="fonts.html">fonts</a> used: <a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=556" target="_blank">owls n ink</a> (header font), gaegu</li>
+		<li><a href="fonts.html">fonts</a> used: gaegu, bm-neko (heading 1)<a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=556" target="_blank">owls n ink</a> (heading)</li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">lastfm last played widget</a> by bianca rosa</li>
 		<li>most cat graphics from <a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank">catstuff</a></li>
 		<li>cute memo scans from <a href="https://www.flickr.com/photos/kawaiiscans/" target="_blank">kawaiiscans</a></li>
